tests/lean/inductiveUnivErrorMsg.lean.expected.out
inductiveUnivErrorMsg.lean:19:18-19:22: error: Application type mismatch: The argument
  Bar5
has type
  Prop
of sort `Type` but is expected to have type
  Type ?u
of sort `Type (?u + 1)` in the application
  List Bar5
inductiveUnivErrorMsg.lean:22:0-22:34: error: Invalid universe level in constructor `Bar6.foobar`: Parameter `Foo` has type
  Type
at universe level
  2
which is not less than or equal to the inductive type's resulting universe level
  1
inductiveUnivErrorMsg.lean:36:0-36:27: error: Invalid universe level in constructor `Bar9.foobar`: Parameter `Foo` has type
  Sort u_1
at universe level
  u_1+1
which is not less than or equal to the inductive type's resulting universe level
  u+2
